<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Attendancev4</string>
    <string name="button">Button</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="view_attendance_reports">View Attendance reports</string>
    <string name="view_qr_code">View QR code</string>
    <string name="operating_system">Operating System</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="operating_system1" tools:ignore="DuplicateDefinition">Operating System</string>
    <string name="software_engineering1" tools:ignore="DuplicateDefinition">Software Engineering</string>
</resources>
